# compiler-misc

./: LICENSE  README.md  compiler-misc.cabal  compiler-toolbox.cabal  stack.yaml
examples/: SimpleLexer.x
src/Algorithm/: Worklist.hs
src/Algorithm/Graph/: Flow.hs
src/Bound/Scope/: ExtraInstances.hs
src/Bound/Var/: ExtraInstances.hs
src/Control/Monad/: CommentBuffer.hs  Comments.hs  Context.hs  FileArtifacts.hs  FileLoader.hs  Frontend.hs  Genpos.hs  Gensym.hs  GraphBuilder.hs  Keywords.hs  Lexer.hs  MemoryArtifacts.hs  MemoryLoader.hs  Messages.hs  Positions.hs  ScopeBuilder.hs  SkipComments.hs  SourceBuffer.hs  SourceFiles.hs  SourceLoader.hs  Symbol.hs  Symbols.hs
src/Control/Monad/Artifacts/: Class.hs
src/Control/Monad/CommentBuffer/: Class.hs
src/Control/Monad/Comments/: Class.hs
src/Control/Monad/Genpos/: Class.hs
src/Control/Monad/Gensym/: Class.hs
src/Control/Monad/GraphBuilder/: Class.hs
src/Control/Monad/Keywords/: Class.hs
src/Control/Monad/Loader/: Class.hs
src/Control/Monad/Messages/: Class.hs
src/Control/Monad/Positions/: Class.hs
src/Control/Monad/ScopeBuilder/: Class.hs
src/Control/Monad/SourceBuffer/: Class.hs
src/Control/Monad/SourceFile/: Class.hs
src/Control/Monad/SourceFiles/: Class.hs
src/Control/Monad/SourceLoader/: Class.hs
src/Control/Monad/Symbol/: Class.hs
src/Control/Monad/Symbols/: Class.hs
src/Data/: Equivs.hs  Interval.hs  Intervals.hs  LexicalError.hs  Message.hs  Pos.hs  Position.hs  PositionElement.hs  PositionInfo.hs  ScopeID.hs  Symbol.hs
src/Data/Equivs/: Hashable.hs  Monad.hs
src/Data/Graph/Inductive/Graph/: Flow.hs
src/Data/Hashable/: ExtraInstances.hs
src/Data/Position/: BasicPosition.hs  Class.hs  DWARFPosition.hs  Filename.hs  Point.hs
src/Prelude/Extras/: ExtraInstances.hs
src/Text/: AlexHelper.hs  AlexWrapper.hs  Escapes.hs  Format.hs  FormatM.hs  Numbers.hs
src/Text/Escapes/: ByteString.hs
src/Text/Escapes/ByteString/: Lazy.hs
src/Text/Numbers/: ByteString.hs
src/Text/Numbers/ByteString/: Lazy.hs
test/: UnitTest.hs
test/Tests/: Control.hs  Data.hs  Text.hs
test/Tests/Control/: Monad.hs
test/Tests/Control/Monad/: Symbols.hs
test/Tests/Data/: Symbol.hs
test/Tests/Text/: Format.hs  Numbers.hs
