Name:                   compiler-misc
Category:               Compiler, Data
Version:                0.0.0
License:                BSD3
License-File:           LICENSE
Author:                 Eric McCorkle
Maintainer:             Eric McCorkle <emc2@metricspace.net>
Stability:              Pre-alpha
Synopsis:               A Haskell library containing miscellaneous components useful for building compilers and language frontends.
Homepage:               https://github.com/emc2/arith-encode
Bug-Reports:            https://github.com/emc2/arith-encode/issues
Copyright:              Copyright (c) 2014 Eric McCorkle.  All rights reserved.
Description:
  This library provides a collection of miscellaneous bits of
  functionality that come in handy when implementing a compiler.
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:emc2/arith-encode.git

Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, pretty, containers,
                        hashable, prelude-extras, hashable-extras, bound, bytestring,
                        array, mtl, unordered-containers, HUnit-Plus, hashtables,
                        filepath, utf8-string, hexpat, hexpat-pickle
  ghc-options:          -fhpc

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, pretty, containers,
                        hashable, prelude-extras, hashable-extras, bound, bytestring,
                        array, mtl, unordered-containers, hashtables, filepath, utf8-string,
                        hexpat, hexpat-pickle
  exposed-modules:      Bound.Scope.ExtraInstances
                        Bound.Var.ExtraInstances
                        Control.Monad.CommentBuffer.Class
                        Control.Monad.Comments
                        Control.Monad.Comments.Class
                        Control.Monad.Genpos.Class
                        Control.Monad.Gensym
                        Control.Monad.Gensym.Class
                        Control.Monad.Positions.Class
                        Control.Monad.SourceFiles.Class
                        Control.Monad.SourceLoader
                        Control.Monad.SourceLoader.Class
                        Control.Monad.Symbols
                        Control.Monad.Symbols.Class
                        Data.Hashable.ExtraInstances
                        Data.Interval
                        Data.Position
                        Data.Symbol
                        Prelude.Extras.ExtraInstances
                        Text.Format
                        Text.Escapes
                        Text.Numbers
