Name:                   compiler-misc
Category:               Compiler, Data
Version:                0.0.0
License:                BSD3
License-File:           LICENSE
Author:                 Eric McCorkle
Maintainer:             Eric McCorkle <emc2@metricspace.net>
Stability:              Pre-alpha
Synopsis:               A Haskell library containing miscellaneous components useful for building compilers and language frontends.
Homepage:               https://github.com/emc2/compiler-misc
Bug-Reports:            https://github.com/emc2/compiler-misc/issues
Copyright:              Copyright (c) 2014 Eric McCorkle.  All rights reserved.
Description:
  This library provides a collection of miscellaneous bits of
  functionality that come in handy when implementing a compiler.
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:emc2/compiler-misc.git

Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, pretty, containers,
                        hashable, prelude-extras, hashable-extras, bound, bytestring,
                        array, mtl, unordered-containers, HUnit-Plus, hashtables,
                        filepath, utf8-string, hexpat, hexpat-pickle, semigroups,
                        blaze-builder, ansi-terminal
  ghc-options:          -fhpc

--Executable SimpleLexer
--  default-language:     Haskell2010
--  hs-source-dirs:       src, examples
--  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, pretty, containers,
--                        hashable, prelude-extras, hashable-extras, bound, bytestring,
--                        array, mtl, unordered-containers, hashtables, filepath, utf8-string,
--                        hexpat, hexpat-pickle, semigroups, blaze-builder, ansi-terminal
--  build-tools:          alex
--  main-is:              Main.hs

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, pretty, containers,
                        hashable, prelude-extras, hashable-extras, bound, bytestring,
                        array, mtl, unordered-containers, hashtables, filepath, utf8-string,
                        hexpat, hexpat-pickle, semigroups, blaze-builder, ansi-terminal
  exposed-modules:      Bound.Scope.ExtraInstances
                        Bound.Var.ExtraInstances
                        Control.Monad.CommentBuffer
                        Control.Monad.CommentBuffer.Class
                        Control.Monad.Comments
                        Control.Monad.Comments.Class
                        Control.Monad.Context
                        Control.Monad.Genpos
                        Control.Monad.Genpos.Class
                        Control.Monad.Gensym
                        Control.Monad.Gensym.Class
                        Control.Monad.Keywords
                        Control.Monad.Keywords.Class
                        Control.Monad.Lexer
                        Control.Monad.Messages
                        Control.Monad.Messages.Class
                        Control.Monad.Positions
                        Control.Monad.Positions.Class
                        Control.Monad.SkipComments
                        Control.Monad.SourceBuffer
                        Control.Monad.SourceBuffer.Class
                        Control.Monad.SourceFiles
                        Control.Monad.SourceFiles.Class
                        Control.Monad.Symbols
                        Control.Monad.Symbols.Class
                        Data.Hashable.ExtraInstances
                        Data.Interval
                        Data.LexicalError
                        Data.Message
                        Data.Position
                        Data.PositionInfo
                        Data.Symbol
                        Prelude.Extras.ExtraInstances
                        Text.AlexWrapper
                        Text.Format
                        Text.Escapes
                        Text.Escapes.ByteString
                        Text.Escapes.ByteString.Lazy
                        Text.Numbers
                        Text.Numbers.ByteString
                        Text.Numbers.ByteString.Lazy
