Name:                   compiler-toolbox
Category:               Compiler, Data
Version:                0.0.0
License:                BSD3
License-File:           LICENSE
Author:                 Eric McCorkle
Maintainer:             Eric McCorkle <emc2@metricspace.net>
Stability:              Pre-alpha
Synopsis:               A Haskell library containing miscellaneous components useful for building compilers and language frontends.
Homepage:               https://github.com/saltlang/compiler-toolbox
Bug-Reports:            https://github.com/saltlang/compiler-toolbox/issues
Copyright:              Copyright (c) 2016 Eric McCorkle.  All rights reserved.
Description:
  This library provides a collection of miscellaneous bits of
  functionality that come in handy when implementing a compiler.
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:saltlang/compiler-toolbox.git

Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, pretty, containers,
                        hashable, bytestring, bound, hashable-extras, prelude-extras,
                        array, mtl >= 2.2, unordered-containers, HUnit-Plus, hashtables,
                        filepath, utf8-string, hexpat, hexpat-pickle, semigroups,
                        blaze-builder, ansi-terminal, dynamic-pprint, monad-journal, fgl,
                        bitwise
  ghc-options:          -fhpc

--Executable SimpleLexer
--  default-language:     Haskell2010
--  hs-source-dirs:       src, examples
--  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, pretty, containers,
--                        hashable, bytestring, bound, hashable-extras, prelude-extras,
--                        array, mtl, unordered-containers, hashtables, filepath, utf8-string,
--                        hexpat, hexpat-pickle, blaze-builder, ansi-terminal, semigroups,
--  build-tools:          alex
--  main-is:              Main.hs

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.4.0 && < 5, Cabal >= 1.16.0, pretty, containers,
                        hashable, bytestring, bound, hashable-extras, prelude-extras,
                        array, mtl >= 2.2, unordered-containers, hashtables, filepath,
                        utf8-string, hexpat, hexpat-pickle, blaze-builder, semigroups,
                        ansi-terminal, directory, dynamic-pprint, monad-journal, fgl,
                        bitwise
  exposed-modules:      Algorithm.Graph.Flow
                        Algorithm.Worklist
                        Bound.Scope.ExtraInstances
                        Bound.Var.ExtraInstances
                        Control.Monad.Artifacts.Class
                        Control.Monad.CommentBuffer
                        Control.Monad.CommentBuffer.Class
                        Control.Monad.Comments
                        Control.Monad.Comments.Class
                        Control.Monad.Context
                        Control.Monad.FileArtifacts
                        Control.Monad.FileLoader
                        Control.Monad.Frontend
                        Control.Monad.Genpos
                        Control.Monad.Genpos.Class
                        Control.Monad.Gensym
                        Control.Monad.Gensym.Class
                        Control.Monad.GraphBuilder.Class
                        Control.Monad.GraphBuilder
                        Control.Monad.Keywords
                        Control.Monad.Keywords.Class
                        Control.Monad.Loader.Class
                        Control.Monad.MemoryArtifacts
                        Control.Monad.MemoryLoader
                        Control.Monad.Messages
                        Control.Monad.Messages.Class
                        Control.Monad.Positions
                        Control.Monad.Positions.Class
                        Control.Monad.ScopeBuilder
                        Control.Monad.ScopeBuilder.Class
                        Control.Monad.SkipComments
                        Control.Monad.SourceBuffer
                        Control.Monad.SourceBuffer.Class
                        Control.Monad.SourceFiles
                        Control.Monad.SourceFiles.Class
                        Control.Monad.Symbols
                        Control.Monad.Symbols.Class
                        Data.Hashable.ExtraInstances
                        Data.Interval
                        Data.Intervals
                        Data.Message
                        Data.Position
                        Data.Position.BasicPosition
                        Data.Position.DWARFPosition
                        Data.Position.Class
                        Data.Position.Filename
                        Data.Position.Point
                        Data.PositionElement
                        Data.ScopeID
                        Data.Symbol
                        Prelude.Extras.ExtraInstances
                        Text.AlexWrapper
                        Text.Escapes
                        Text.Escapes.ByteString
                        Text.Escapes.ByteString.Lazy
                        Text.Numbers
                        Text.Numbers.ByteString
                        Text.Numbers.ByteString.Lazy
